src/test/ui/lang-item-missing-generator.stderr
error: requires `generator` lang_item
  --> $DIR/lang-item-missing-generator.rs:15:17
   |
LL | pub fn abc() -> impl FnOnce(f32) {
   |                 ^^^^^^^^^^^^^^^^

error: aborting due to previous error

